Fixed URL bar thing, and changed color scheme to Solarized Dark.

--- a/userChrome.css
+++ b/userChrome.css
@@ -1,30 +1,30 @@
  :root {
 
    /* Minimal Functional Fox variables*/
-  --mff-bg: #292f36;
-  --mff-icon-color: #e0fbfc;
+  --mff-bg: #073642;
+  --mff-icon-color: #fdf6e3;
   --mff-nav-toolbar-padding: 8px;
   --mff-sidebar-bg: var(--mff-bg);
   --mff-sidebar-color: #e0fbfc;
   --mff-tab-border-radius: 0px;
   --mff-tab-color: #fefefa;
   --mff-tab-font-family: "Cantarell", sans;
-  --mff-tab-font-size: 11pt;
+  --mff-tab-font-size: 10pt;
   --mff-tab-font-weight: 400;
-  --mff-tab-height: 32px;
+  --mff-tab-height: 33px;
   --mff-tab-pinned-bg: #70c1b3;
-  --mff-tab-selected-bg: #ee6c4d;
-  --mff-tab-soundplaying-bg: #9c89b8;
-  --mff-urlbar-color: #98c1d9;
-  --mff-urlbar-focused-color: #e0fbfc;
+  --mff-tab-selected-bg: #cb4b16;
+  --mff-tab-soundplaying-bg: #b58900;
+  --mff-urlbar-color: #93a1a1;
+  --mff-urlbar-focused-color: #002b36;
   --mff-urlbar-font-family: "Cantarell", serif;
   --mff-urlbar-font-size: 12pt;
   --mff-urlbar-font-weight: 700;
-  --mff-urlbar-results-color: #e0fbfc;
-  --mff-urlbar-results-font-family: "mononoki Nerd Font", serif;
-  --mff-urlbar-results-font-size: 12pt;
+  --mff-urlbar-results-color: #2aa198;
+  --mff-urlbar-results-font-family: "Source-Code-Pro", mono;
+  --mff-urlbar-results-font-size: 10pt;
   --mff-urlbar-results-font-weight: 700;
-  --mff-urlbar-results-url-color: #98c1d9;
+  --mff-urlbar-results-url-color: #268bd2;
   /*   --mff-tab-selected-bg: linear-gradient(90deg, rgba(232,74,95,1) 0%, rgba(255,132,124,1) 50%, rgba(254,206,168,1) 100%); */
   /*   --mff-urlbar-font-weight: 600; */
 
@@ -36,6 +36,8 @@
   --panel-disabled-color: #f9f9fa80;
   --toolbar-bgcolor: var(--mff-bg) !important;
   --urlbar-separator-color: transparent !important;
+  
+  --lwt-toolbar-field-background-color: red !important; /* normally */
 }
 
 /*
@@ -79,10 +81,10 @@
 }
 
 .tab-text {
-  font-family: var(--mff-tab-font-family);
-  font-weight: var(--mff-tab-font-weight);
+  font-family: var(--mff-tab-font-family) !important;
+  font-weight: var(--mff-tab-font-weight) !important;
   font-size: var(--mff-tab-font-size) !important;
-  color: var(--mff-tab-color);
+  color: var(--mff-tab-color) !important;
 }
 
 /* Hide the favicon for tabs */
@@ -126,9 +128,9 @@ width: 50% !important;
   border-radius: var(--mff-tab-border-radius) !important;
   border-width: 0;
   height: var(--mff-tab-height) !important;
-  margin-bottom: 4px !important;
-  margin-inline-end: 4px !important;
-  margin-top: 4px !important;
+  margin-bottom: 0px !important;
+  margin-inline-end: 0px !important;
+  margin-top: 0px !important;
   max-height: var(--mff-tab-height) !important;
   min-height: var(--mff-tab-height) !important;
 }
@@ -174,15 +176,15 @@ width: 50% !important;
   font-family: var(--mff-urlbar-results-font-family);
   font-weight: var(--mff-urlbar-results-font-weight);
   font-size: var(--mff-urlbar-results-font-size) !important;
-  color: var(--mff-urlbar-results-color) !important;
+  color: var(--mff-urlbar-results-color) !important; !important;
 }
 
 .urlbarView-row[type="bookmark"] > span{
-  color: green !important;
+  color: #859900 !important;
 }
 
 .urlbarView-row[type="switchtab"] > span{
-  color: orange !important;
+  color: #cb4b16 !important;
 }
 
 .urlbarView-url, .search-panel-one-offs-container {
@@ -194,14 +196,6 @@ width: 50% !important;
 
 .urlbarView-favicon, .urlbarView-type-icon {
   display: none !important;
-}
-
-#urlbar-input {
-  font-size: var(--mff-urlbar-font-size) !important;
-  color: var(--mff-urlbar-color) !important;
-  font-family: var(--mff-urlbar-font-family) !important;
-  font-weight: var(--mff-urlbar-font-weight)!important;
-  text-align: center !important;
 }
 
 #tracking-protection-icon-container, #identity-box {
@@ -230,11 +224,6 @@ toolbar {
 }
 
 #navigator-toolbox, toolbaritem {
-  border: none !important;
-}
-
-#urlbar-background {
-  background-color: var(--mff-bg) !important;
   border: none !important;
 }
 
@@ -276,13 +265,25 @@ toolbar#nav-bar {
 }
 
 #urlbar {
+  color: var(--mff-urlbar-color) !important;
+  font-size: var(--mff-urlbar-font-size) !important;
+  font-family: var(--mff-urlbar-font-family) !important;
+  font-weight: var(--mff-urlbar-font-weight)!important;
+  text-align: center !important;
+  border: none !important;
+  background-color: var(--mff-bg) !important;
+  border-radius: 0px !important;
   max-width: 70% !important;
   margin: 0 15% !important;
-  /* 	position: unset!important; */;
+  box-shadow: 0 !important;
 }
 
-#urlbar-input:focus {
-  color: var(--mff-urlbar-focused-color) !important;
+#urlbar:focus-within {
+  background-color: var(--mff-urlbar-focused-color) !important;
+}
+
+#urlbar:hover {
+  background-color: var(--mff-urlbar-focused-color) !important;
 }
 
 
@@ -295,6 +296,22 @@ toolbarbutton {
   box-shadow: none !important;
 }
 
+findbar {
+  background-color: var(--mff-bg) !important;
+  font-family: var(--mff-tab-font-family) !important;
+  font-weight: var(--mff-tab-font-weight) !important;
+  font-size: var(--mff-tab-font-size) !important;
+  color: var(--mff-tab-color) !important;
+}
+
+.findbar-textbox {
+  font-family: var(--mff-tab-font-family) !important;
+  font-weight: var(--mff-tab-font-weight) !important;
+  font-size: var(--mff-tab-font-size) !important;
+  background-color: var(--mff-urlbar-focused-color) !important;
+  border: none !important;
+  border-radius: 0px !important;
+}
 
 /*
   ___ ___ ___  ___ ___   _   ___
