Added back monospaced fonts.

--- a/userChrome.css
+++ b/userChrome.css
@@ -21,7 +21,7 @@
   --mff-urlbar-font-size: 12pt;
   --mff-urlbar-font-weight: 700;
   --mff-urlbar-results-color: #2aa198;
-  --mff-urlbar-results-font-family: "Cantarell", mono;
+  --mff-urlbar-results-font-family: "Source-Code-Pro", "mononoki Nerd Font", mono;
   --mff-urlbar-results-font-size: 10pt;
   --mff-urlbar-results-font-weight: 700;
   --mff-urlbar-results-url-color: #268bd2;
