--- a/userChrome.css
+++ b/userChrome.css
@@ -173,10 +173,10 @@ width: 50% !important;
 }
 
 #urlbar-results {
-  font-family: var(--mff-urlbar-results-font-family);
-  font-weight: var(--mff-urlbar-results-font-weight);
+  font-family: var(--mff-urlbar-results-font-family) !important;;
+  font-weight: var(--mff-urlbar-results-font-weight) !important;;
   font-size: var(--mff-urlbar-results-font-size) !important;
-  color: var(--mff-urlbar-results-color) !important; !important;
+  color: var(--mff-urlbar-results-color) !important;
 }
 
 .urlbarView-row[type="bookmark"] > span{
@@ -198,6 +198,33 @@ width: 50% !important;
   display: none !important;
 }
 
+#urlbar {
+  max-width: 70% !important;
+  margin: 0 15% !important;
+}
+
+#urlbar-input {
+  font-size: var(--mff-urlbar-font-size) !important;
+  color: var(--mff-urlbar-color) !important;
+  font-family: var(--mff-urlbar-font-family) !important;
+  font-weight: var(--mff-urlbar-font-weight)!important;
+  text-align: center !important;
+}
+
+#urlbar-input:focus {
+  background-color: var(--mff-urlbar-focused-color) !important;
+}
+
+#urlbar-input:hover {
+  background-color: var(--mff-urlbar-focused-color) !important;
+}
+
+#urlbar-background {
+  opacity: .98 !important;
+  background-color: var(--mff-bg) !important;
+  border: none !important;
+}
+
 #tracking-protection-icon-container, #identity-box {
   display: none;
 }
@@ -217,10 +244,6 @@ width: 50% !important;
 
 toolbar {
   background-image: none !important;
-}
-
-#urlbar-background {
-  opacity: .98 !important;
 }
 
 #navigator-toolbox, toolbaritem {
@@ -262,28 +285,6 @@ toolbar#nav-bar {
 
 toolbar#nav-bar {
   padding: 4px !important;
-}
-
-#urlbar {
-  color: var(--mff-urlbar-color) !important;
-  font-size: var(--mff-urlbar-font-size) !important;
-  font-family: var(--mff-urlbar-font-family) !important;
-  font-weight: var(--mff-urlbar-font-weight)!important;
-  text-align: center !important;
-  border: none !important;
-  background-color: var(--mff-bg) !important;
-  border-radius: 0px !important;
-  max-width: 70% !important;
-  margin: 0 15% !important;
-  box-shadow: 0 !important;
-}
-
-#urlbar:focus-within {
-  background-color: var(--mff-urlbar-focused-color) !important;
-}
-
-#urlbar:hover {
-  background-color: var(--mff-urlbar-focused-color) !important;
 }
 
 
